Grails: upgrade to 2.2.5 - so far so good.

--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 #Grails Metadata file
-#Wed Jul 03 09:58:43 EST 2013
-app.grails.version=2.2.3
+#Wed Apr 08 10:09:41 NZST 2020
+app.grails.version=2.2.5
 app.name=aaf-application-base
