--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,5 @@
 #Grails Metadata file
-#Wed Apr 08 10:09:41 NZST 2020
-app.grails.version=2.2.5
+#Wed Apr 08 10:27:39 NZST 2020
+app.grails.version=2.3.11
 app.name=aaf-application-base
+app.servlet.version=3.0
